2009-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/source.el (ede-want-any-source-files-p)
	(ede-want-any-auxiliary-files-p, ede-want-any-files-p): Return
	search result.  This error was introduced while merging.

2009-10-07  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (WINS_UPDATES): Fix typo in previous change.

2009-10-07  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/autoload.el (batch-update-autoloads): Remove useless use of
	concat.

2009-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files-x.el (read-file-local-variable): Include some
	non-user-variables in the completion table (bug#4664).

2009-10-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-flush-connection-property): Add trace
	message.

	* net/tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-file-name-handler-alist): Add handler for
	`copy-directory', `expand-file-name', `set-file-modes'.
	(tramp-smb-handle-copy-directory)
	(tramp-smb-handle-expand-file-name)
	(tramp-smb-handle-set-file-modes): New defuns.
	(tramp-smb-handle-copy-file): Handle KEEP-DATE.
	(tramp-smb-handle-file-attributes): Simplify check for retrieving
	entry.
	(tramp-smb-handle-insert-directory): Don't flush the cache.
	(tramp-smb-maybe-open-connection): Check for samba client and
	server versions.

2009-10-07  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/autoload.el (batch-update-autoloads): Fix last change
	to not error out of search for "^lisp=" fails.

2009-10-07  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (WINS_UPDATES): New macro.
	(custom-deps, finder-data, autoloads): Use it.

2009-10-07  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (autoloads): Revert previous change.
	* emacs-lisp/autoload.el (batch-update-autoloads): Rather than having
	the list of preloaded files passed on the command-line, get
	it from src/Makefile.

	* calendar/calendar.el (calendar-basic-setup): In the wide frame case,